apps/gcp/ci-dashboard/jenkins-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-dashboard-jenkins-worker
  namespace: apps
  labels:
    app.kubernetes.io/name: ci-dashboard-jenkins-worker
    app.kubernetes.io/part-of: ci-dashboard
    ci-dashboard.pingcap.com/instance: jenkins-worker
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: ci-dashboard-jenkins-worker
      app.kubernetes.io/part-of: ci-dashboard
      ci-dashboard.pingcap.com/instance: jenkins-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ci-dashboard-jenkins-worker
        app.kubernetes.io/part-of: ci-dashboard
        ci-dashboard.pingcap.com/instance: jenkins-worker
    spec:
      serviceAccountName: ci-dashboard
      restartPolicy: Always
      containers:
        - name: jenkins-worker
          image: ghcr.io/pingcap-qe/ee-apps/ci-dashboard-jobs:replaced-by-kustomize
          imagePullPolicy: IfNotPresent
          args:
            - consume-jenkins-events
          resources:
            requests:
              cpu: "500m"
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 2Gi
